Quark works now...